--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.masai.uber" >
+    package="com.masai.uber">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -29,7 +29,14 @@ For WRITE EXTERNAL STORAGE warning you can have a look at this article I hope it
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Uber" >
+        android:theme="@style/Theme.Uber">
+        <activity android:name=".ui.activities.SplashScreenActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -42,23 +49,30 @@ For WRITE EXTERNAL STORAGE warning you can have a look at this article I hope it
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".ui.activities.LaunchFragmentsActivity" />
+        <activity
+            android:name=".ui.activities.LaunchFragmentsActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.activities.DriverHomeActivity"
             android:label="@string/title_activity_nav_main"
-            android:theme="@style/Theme.Uber.NoActionBar" />
-        <activity android:name=".ui.activities.SocialActivity" />
-        <activity android:name=".ui.activities.DriverDetailsActivity" />
-        <activity android:name=".ui.activities.PaymentGateWayActivity" />
-        <activity android:name=".ui.activities.PhoneVerificationActivity" />
-        <activity android:name=".ui.activities.GetStartedActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".ui.activities.MainActivity" />
+            android:theme="@style/Theme.Uber.NoActionBar"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.activities.SocialActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.activities.DriverDetailsActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.activities.PaymentGateWayActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.activities.PhoneVerificationActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".ui.activities.GetStartedActivity"/>
+        <activity
+            android:name=".ui.activities.MainActivity"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
