--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-
-    //Firebase
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'//Firebase
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.firebase:firebase-auth'
@@ -99,5 +97,6 @@ dependencies {
     implementation 'com.github.gabriel-TheCode:AestheticDialogs:1.3.6'
     // Full GeoFire library for Realtime Database users
     implementation 'com.firebase:geofire-android:3.1.0'
-
+    //sweet alert dialog
+    implementation 'com.github.cazaea:sweet-alert-dialog:1.0.0'
 }
