--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@ For WRITE EXTERNAL STORAGE warning you can have a look at this article I hope it
 
         <service android:name=".services.MyFirebaseServices">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_SERVICE" />
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
