--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,5 @@ dependencies {
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
     //rxjava
     implementation "io.reactivex.rxjava3:rxjava:3.0.13"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
