--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,9 @@ For WRITE EXTERNAL STORAGE warning you can have a look at this article I hope it
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_icons8_uber"
+        android:icon="@drawable/ic_uber_15"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_icons8_uber"
+        android:roundIcon="@drawable/ic_uber_15"
         android:supportsRtl="true"
         android:theme="@style/Theme.Uber">
         <activity android:name=".ui.activities.SplashScreenActivity">
